--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,9 +55,10 @@ repositories {
 }
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
+    testImplementation 'junit:junit:4.12'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
     implementation project(path: ':player')
     implementation project(path: ':helper')
 
