--- a/player/build.gradle
+++ b/player/build.gradle
@@ -25,4 +25,6 @@ android {
 dependencies {
     implementation "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
     testImplementation 'junit:junit:4.12'
+    compile project(path: ':helper')
+
 }
