--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,25 @@ android {
             signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            versionNameSuffix "_Debug"
+            minifyEnabled true
+            shrinkResources true
+            zipAlignEnabled true
+            consumerProguardFiles 'proguard-rules.pro'
+        }
+    }
+    signingConfigs {
+        release {
+            try {
+                storeFile file("./keystore/starcor.keystore")
+                storePassword "ipqdnvai"
+                keyAlias "startcor.com"
+                keyPassword "ipqdnvai"
+            } catch (ex) {
+                throw new InvalidUserDataException(ex.toString())
+            }
+        }
     }
     sourceSets {
         main {
@@ -59,7 +78,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation project(path: ':player')
     implementation project(path: ':helper')
+    implementation 'androidx.media2:media2:1.0.0-alpha04'
+    compile project(path: ':player')
+    compile project(path: ':vlc')
+    compile(name: 'libvlc-3.0.0', ext: 'aar')
 
 }
