--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,10 +41,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         debug {
-            versionNameSuffix "_Debug"
-            minifyEnabled true
-            shrinkResources true
-            zipAlignEnabled true
+            minifyEnabled false
+            shrinkResources false
+            zipAlignEnabled false
             consumerProguardFiles 'proguard-rules.pro'
         }
     }
@@ -80,8 +79,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation project(path: ':helper')
     implementation 'androidx.media2:media2:1.0.0-alpha04'
-    compile project(path: ':player')
-    compile project(path: ':vlc')
+    implementation project(path: ':player')
+    implementation project(path: ':vlc')
     compile(name: 'libvlc-3.0.0', ext: 'aar')
 
 }
